package classes;

public class Resposta {
    private String texto;

    public Resposta(String texto) {
        this.texto = texto;
    }

    public String getTexto() {
        return texto;
    }
}
